add splash screen, multi asyn query, all contact, official account

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,15 @@
     <string name="description_login">Vui lòng nhập số điện thoại và mật khẩu để đăng nhập</string>
     <string name="description_update_contact">Nhanh chóng thêm bạn vào Zalo từ danh bạ điện thoại</string>
     <string name="description_update_status">Cập nhật trạng thái của bạn và xem bạn bè mình đang&#8230;</string>
+    <string name="description_avatar">avatar</string>
+    <string name="description_preview_image">preview image</string>
+    <string name="description_unseen">unseen icon</string>
+    <string name="description_call">call</string>
+    <string name="description_video">video</string>
 
     <string name="hint_phone_number">Số điện thoại</string>
     <string name="hint_password">Mật khẩu</string>
     <string name="hint_message">Tin nhắn</string>
+
+    <string name="placeholder_text">text</string>
 </resources>
