--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="label_day">ngày</string>
     <string name="label_continue">Tiếp tục</string>
     <string name="label_name">Tên</string>
+    <string name="label_like">Thích</string>
+    <string name="label_reply">Trả lời</string>
 
     <string-array name="sort_group_options">
         <item>Tên nhóm</item>
@@ -80,6 +82,4 @@
     <string name="hint_search_not_clicked">Tìm thành viên</string>
     <string name="hint_search_clicked">Tìm tên hoặc số điện thoại</string>
     <string name="hint_full_name">Tên đầy đủ</string>
-
-    <string name="placeholder_text">Text</string>
 </resources>
