--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,9 @@
     <string name="label_vietnamese"><u>Tiếng Việt</u></string>
     <string name="label_english"><u>Tiếng Anh</u></string>
     <string name="label_get_password"><u><b>Lấy lại mật khẩu</b></u></string>
-    <string name="label_home_screen">Trang chủ</string>
     <string name="label_chat_tab">Tin nhắn</string>
     <string name="label_contacts_tab">Danh bạ</string>
     <string name="label_groups_tab">Nhóm</string>
-    <string name="label_settings">Cài đặt</string>
     <string name="label_faq"><b><u>Câu hỏi thường gặp</u></b></string>
     <string name="label_diary_tab">Nhật ký</string>
     <string name="label_more_tab">Thêm</string>
@@ -120,8 +118,7 @@
     <string name="hint_phone_number">Số điện thoại</string>
     <string name="hint_password">Mật khẩu</string>
     <string name="hint_message">Tin nhắn</string>
-    <string name="hint_search_not_clicked">Tìm thành viên</string>
-    <string name="hint_search_clicked">Tìm tên hoặc số điện thoại</string>
+    <string name="hint_search_members">Tìm thành viên</string>
     <string name="hint_full_name">Tên đầy đủ</string>
     <string name="hint_search_friends_messages">Tìm bạn bè, tin nhắn &#8230;</string>
 </resources>
