--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,8 +67,8 @@
     <string name="label_callback">Gọi lại</string>
 
     <string-array name="sort_group_options">
-        <item>Tên nhóm</item>
         <item>Hoạt động cuối</item>
+        <item>Tên nhóm</item>
         <item>Nhóm quản lý</item>
         <item>Nhóm mở</item>
     </string-array>
@@ -93,7 +93,6 @@
     <string name="description_vote">Bình chọn</string>
     <string name="description_name_group">Đặt tên nhóm</string>
     <string name="description_create_group">Tạo nhóm mới</string>
-    <string name="description_online_at">Truy cập %d %s trước</string>
     <string name="description_selected_count">Đã chọn: %d</string>
     <string name="description_image">Hình ảnh</string>
     <string name="description_back">Trở lại</string>
@@ -114,6 +113,10 @@
     <string name="description_outgoing_voice_call">Cuộc gọi thoại đi</string>
     <string name="description_outgoing_video_call">Cuộc gọi video đi</string>
     <string name="description_missed_call">Cuộc gọi nhỡ</string>
+    <string name="description_last_seen">Truy cập</string>
+    <string name="description_ago">trước</string>
+    <string name="description_just_online">Vừa mới truy cập</string>
+    <string name="description_less_than_one_min">ít hơn 1 phút</string>
 
     <string name="hint_phone_number">Số điện thoại</string>
     <string name="hint_password">Mật khẩu</string>
