--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,8 @@
     <string name="description_processing">Đang xử lý</string>
     <string name="description_sent">Đã gửi</string>
     <string name="description_no_connection">Không có kết nối</string>
+    <string name="description_your_story">Tin của bạn</string>
+    <string name="description_notification">Thông báo</string>
 
     <string name="hint_phone_number">Số điện thoại</string>
     <string name="hint_password">Mật khẩu</string>
